W8/day-c/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: day-c-nginx-service
spec:
  type: NodePort
  selector:
    app: day-c-nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30081
