W8/day-c/k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx-ingress
spec:
  podSelector:
    matchLabels:
      app: day-c-nginx
  policyTypes:
    - Ingress
  ingress:
    - {}
